
	modified:   History.txt
	renamed:    History.txt -> History[150427-150625].txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
ai_150625.2015/06/25.17_13_30.14.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/AI/AI_by_Example/src/VS8 projects/Common/2D/Vector2D.h
	modified:   ZGame/AI/AI_by_Example/src/VS8 projects/Common/2D/Vector2d.cpp
	modified:   ZGame/AI/AI_by_Example/src/VS8 projects/Common/2D/geometry.h
	modified:   ZGame/AI/AI_by_Example/src/VS8 projects/Common/misc/utils.h

+---------+---------+---------+---------+---------+---------+---------+---------+ 
D.2015/06/25.17_43_05.51.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/AI/AI_by_Example/src/VS8 projects/Common/2D/geometry.h

+---------+---------+---------+---------+---------+---------+---------+---------+ 
vs2005_patch.2015-06-26.08_19_25.71.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   "Doc/VS/vs2005\345\256\211\350\243\205sp1\345\220\216\351\234\200\345\256\211\350\243\205\347\232\204\350\241\245\344\270\201.txt"
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
D.2015/06/26.10_19_46.70.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   ZGame/Doc/leereilly_game_res.md

Changes not staged for commit:
  (use "git add/rm <file>..." to update what will be committed)
  (use "git checkout -- <file>..." to discard changes in working directory)

	deleted:    T.Http.cs
