@@ -85,7 +85,7 @@
       L396, 24:R#.18   @3ds
       L405, 25:R#.19   @znote BookList
       L408, 26:todo 深入理解nginx redis设计与实现
-     Zndex_E : //z 2015-06-25 12:57:00 L.189'39780 T946641298 .K ~420 +----+----+----+----+----+
+     Zndex_E : //z 2015-06-30 13:49:07 L.184'36653 T4135433783.K ~423 +----+----+----+----+----+
      TimeCnt : //z 2015-06-24 12:53:49 L.190'39971 T878696314 .K ~16  +----+----+----+----+----+
      Reg.Cnt : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~20  +----+----+----+----+----+
      #20  R+ : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~20    V+.407  L+.439  
@@ -110,7 +110,7 @@
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-06-25 12:57:00 L.189'39780 T946641298 .K ~440   R+.19   L+.472  --+----+
+     Version : //z 2015-06-30 13:49:07 L.184'36653 T4135433783.K ~443   R+.19   L+.459  --+----+
      #23  V+ : //z 2015-06-24 14:58:36 L.190'32484 T3461811901.K ~437   R+.19   L+.466  
      #22  V+ : //z 2015-06-24 13:11:19 L.190'38921 T2165348626.K ~418   R+.19   L+.445  
      #21  R+ : //z 2015-06-24 13:07:42 L.190'39138 T2164378419.K ~407   R+.20   L+.440  V+.407  
@@ -456,6 +456,7 @@ Unity游戏设计与实现:南梦宫一线程序员的开发实例
 比较郁闷的是，点进这本书的英文网站，这本书原来已经第三版了。
 
 Game AI Pro 1
+2015-06-30 13:49 todo http://download.csdn.net/download/chengdz599/8792741 ??
 Game AI Pro 2
 
 人工智能游戏编程真言
