@@ -62,3 +62,14 @@ Changes not staged for commit:
 
 	deleted:    T.Http.cs
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+game_book_ai_pro.2015/07/01.13_07_45.06.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
